add download template for bulk editing